Zoom Extents, Images
Fix zoom extents for compatibility with mobile, add first two images

--- a/css/fpf-accomplishments.css
+++ b/css/fpf-accomplishments.css
@@ -10,6 +10,13 @@ body {
 	margin:0;
 }
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /*width: 40%;*/
+}
+
 /*This is formatting for the first line in the popup */
 p.title {
 	font-family: ff-meta-web-pro, sans-serif;
@@ -97,7 +104,7 @@ p {
 
 .leaflet-popup-scrolled {
   overflow:auto;
-  border-bottom:1px solid #29473d;
+  border-bottom:1px solid #ebeae8;
   border-top:1px solid #ebeae8;
   }
 
